# storage-cloud

./: .gitignore  README.md  messages.proto
admin/: README.md  pom.xml
admin/backend/: .gitignore  pom.xml
admin/backend/api-test/: files.http  login.http
admin/frontend/: .editorconfig  .gitignore  README.md  package.json  tslint.json
admin/frontend/public/: index.html
admin/frontend/src/: App.css  App.test.tsx  App.tsx  auth-status-dto.ts  i18n.ts  index.tsx
android-client/: README.md  local.properties
android-client/app/: .gitignore  build.gradle
android-client/gradle/wrapper/: gradle-wrapper.properties
desktop-client/: README.md
desktop-client/DesktopApplication/: Application.csproj  Client.cs  DesktopApplication.csproj  DesktopApplication.sln  Form1.Designer.cs  Form1.cs  Program.cs  Protocol.cs  Serializer.cs  Server.cs  SocketHelper.cs  packages.config
desktop-client/DesktopApplication/Client/: Client.csproj  ClientGUI.Designer.cs  ClientGUI.cs
desktop-client/DesktopApplication/GUI/: ClientGUI.Designer.cs  ClientGUI.cs  LoggedForm.Designer.cs  LoggedForm.cs  LoginForm.Designer.cs  LoginForm.cs  MainWindowForm.Designer.cs  PacketCoder.cs  (+2 more)
desktop-client/Server/: Server.csproj  ServerGUI.Designer.cs  ServerGUI.cs  SocketHelper.cs
proto/: messages.proto
server/: .gitignore  CMakeLists.txt  Client.cpp  Client.h  Client.processCommand.cpp  Database.cpp  Database.h  Logger.cpp  Logger.h  README.md  User.cpp  User.h  main.cpp  main.h  messages.cpp  messages.h  sock_client1.cpp  utils.cpp  utils.h
server/protbuf/: messages.pb.cc  messages.pb.h
(+150 files in other folders)
